add create menu api, get detail order api, improve docs and add test
