# routes/customer.go
@@ -23,5 +23,6 @@ func (Customer) RegisterRoutes(router fiber.Router) {
 	customer := controllers.Customer{Service: customerService}
 
 	router.Post("/customers", customer.Register)
+	router.Get("/customers/:id", customer.Get)
 	router.Post("/customers/:id/reservation", customer.Reservation)
 }
